# eevie

./: package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/types/: ScreenshotTypes.ts
