[package]
name = "eevie"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["global-shortcut-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.5"
imageproc = "0.23.0"
base64 = "0.21.0"
screenshots = "0.5.3"
global-hotkey = "0.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
